# obs2hugo

./: README.md  pyproject.toml
obs_2_hugo_linter/: obs2hugo.py
tests/: index.md  test_obs_2_hugo_linter.py
