[tool.poetry]
name = "obs-2-hugo-linter"
version = "0.1.0"
description = ""
authors = ["kylestratis <kyle.stratis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
obslint = "obs_2_hugo_linter.obs2hugo:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
